# llvm-course

./: .gitignore  CMakeLists.txt  Readme.md  app-ir.ll
game/: CMakeLists.txt
game/includes/: graphics.h
game/mainAction/: CMakeLists.txt  app.c
game/mainAction/llvm_file/: appIR.ll
includes/: graphics.h  graphics.hpp  life.hpp
mainAction/: CMakeLists.txt  app.c  main.cpp
mainAction/llvm_file/: appIR.ll
profiler/: CMakeLists.txt  pass_dump.py
profiler/profiler_sources/: log.c  log_pass.cpp  main.cpp  pass.sh  prof_pass.cpp
profiler/profiler_tests/: prof_example.c
src/: graphics.c  graphics.cpp  life.cpp
